[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/helm_steering_wheel.png" type="Texture" id=1]
[ext_resource path="res://sprites/room_floor_32x16.png" type="Texture" id=2]
[ext_resource path="res://scenes/RoomBase.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/helm_steering_wheel_base.png" type="Texture" id=4]
[ext_resource path="res://sprites/room_outline_32x16.png" type="Texture" id=5]
[ext_resource path="res://scenes/rooms/HelmRoom.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 8 )

[sub_resource type="CircleShape2D" id=2]

[node name="HelmRoom" instance=ExtResource( 3 )]
script = ExtResource( 6 )

[node name="RoomUnderlying" parent="." index="0"]
texture = ExtResource( 2 )

[node name="RoomOutline-maybe-shader" parent="." index="2"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" parent="RoomHover" index="0"]
shape = SubResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/ActivationPopup/MainContainer/ContentContainer" index="0"]
margin_left = 10.0
margin_top = 10.0
margin_right = 403.0
margin_bottom = 197.0
mouse_filter = 2

[node name="ViewportContainer" type="ViewportContainer" parent="CanvasLayer/ActivationPopup/MainContainer/ContentContainer/CenterContainer" index="0"]
margin_left = 132.0
margin_top = 61.0
margin_right = 260.0
margin_bottom = 125.0
mouse_filter = 2

[node name="Viewport" type="Viewport" parent="CanvasLayer/ActivationPopup/MainContainer/ContentContainer/CenterContainer/ViewportContainer" index="0"]
size = Vector2( 128, 64 )
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 0
physics_object_picking = true

[node name="SteeringBase" type="Sprite" parent="CanvasLayer/ActivationPopup/MainContainer/ContentContainer/CenterContainer/ViewportContainer/Viewport" index="0"]
texture = ExtResource( 4 )

[node name="SteeringArea" type="Area2D" parent="CanvasLayer/ActivationPopup/MainContainer/ContentContainer/CenterContainer/ViewportContainer/Viewport/SteeringBase" index="0"]

[node name="SteeringWheel" type="Sprite" parent="CanvasLayer/ActivationPopup/MainContainer/ContentContainer/CenterContainer/ViewportContainer/Viewport/SteeringBase/SteeringArea" index="0"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/ActivationPopup/MainContainer/ContentContainer/CenterContainer/ViewportContainer/Viewport/SteeringBase/SteeringArea" index="1"]
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="CanvasLayer/ActivationPopup/MainContainer/ContentContainer/CenterContainer/ViewportContainer/Viewport/SteeringBase" index="1"]

[node name="Camera2D" type="Camera2D" parent="CanvasLayer/ActivationPopup/MainContainer/ContentContainer/CenterContainer/ViewportContainer/Viewport" index="1"]
current = true

[connection signal="input_event" from="CanvasLayer/ActivationPopup/MainContainer/ContentContainer/CenterContainer/ViewportContainer/Viewport/SteeringBase/SteeringArea" to="." method="_on_SteeringArea_input_event"]
